2010-02-21  Per Bothner  <per@bothner.com>

	* ModuleContext.java (clear): New method.

2010-02-16  Per Bothner  <per@bothner.com>

	* ModuleExp.java (evalModule2): Invoke run() for all Runnables, not
	just ModuleBody.  However, do check the runDone field.
	Note there is no need to check staticInitRun - in that case
	the ModuleBody does not implement Runnable.

2010-01-18  Per Bothner  <per@bothner.com>

	* Language.java (loadClass): Only catch ClassNotFoundException
	during Class.forName - not for possibly-inferior class loading.

2009-12-13  Per Bothner  <per@bothner.com>

	* Declaration.java (makeField): Don't set STATIC on a field initialized
	in the run method, even if it is constant.
	* SetExp.java (compile): Re-arranges cases, since shouldEarlyInit()
	is now also true for ClassExp-valued Declaration.

2009-12-06  Per Bothner  <per@bothner.com>

	* GenericProc.java (addAtEnd): New method.
	(add): Re-implement by calling addAtEnd and then adjusting.
	(setProperty): New method.
	(makeWithoutSorting): New factory method.

2009-12-02  Per Bothner  <per@bothner.com>

	* LetExp.java (apply): Restore old value of evalFrames[level].
	This is normally null, but not always when we deal with TemplateScope
	and other weird scope.
	Fixes bug reported by Jamison Hope <jrh@theptrgroup.com>.

2009-12-01  Per Bothner  <per@bothner.com>

	* FindTailCalls.java (walkClassExp): Don't setCanRead.
	* ModuleExp.java (allocFields): Remove special case for ClassExp.
	* FindCapturedVars.java (walkLambdaExp): Don't inline a named
	module-level function, even if we can.
	(capture): Needs lexical link even if can-call, not just can-read.
	* ClassExp.java (HAS_SUBCLASS): New flag.
	(<init>): Don't setCanRead.  Don't create PairClassType - yet.
	(setTypes): Don't need to create PairClassType the class is private
	and has no sub-classes.

2009-11-04  Per Bothner  <per@bothner.com>

	* ModuleExp.java (compilerAvailable): New static flag.
	(alwaysCompile): Initialize to compilerAvailable.